# fastapi-async-auth-docker-redis

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 77ae0e093f4d_add_password.py  925e37cb32b2_init.py
app/: entrypoint.sh  main.py
app/api/v1/: auth.py  file_upload.py  profile.py  user.py
app/core/: config.py  database.py  dependencies.py  jwt.py  security.py
app/models/: user.py
app/repositories/: user_repo.py
app/schemas/: file_upload.py  user.py
app/services/: auth_service.py  file_upload.py  user_service.py
